[project]
name = "odf-zstream-agents"
version = "0.1.0"
description = "AI-powered z-stream test automation for ODF"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.1.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "litellm>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jenkins>=1.8.0",
    "PyGithub>=2.5.0",
    "psycopg2-binary>=2.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
zstream = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "graph", "nodes", "tools", "api", "cli"]
